# copepod-rust-sdk

./: Cargo.toml  LICENSE
src/: auth.rs  client.rs  error.rs  lib.rs  query.rs  realtime.rs
src/api/: actions.rs  addons.rs  app_auth.rs  app_users.rs  apps.rs  audit_logs.rs  billing.rs  buckets.rs  cache.rs  cdn.rs  cluster.rs  collections.rs  dashboard.rs  deployments.rs  entitlements.rs  environments.rs  feature_definitions.rs  feature_flags.rs  feature_grants.rs  files.rs  governance.rs  iam.rs  import_backup.rs  jobs.rs  launchpads.rs  logs.rs  media_jobs.rs  migrations.rs  mod.rs  oauth.rs  observability.rs  org_invites.rs  orgs.rs  outbound_webhooks.rs  plan_features.rs  plans.rs  platform_auth.rs  queues.rs  records.rs  roles.rs  (+7 more)
src/models/: addon.rs  app.rs  audit.rs  auth.rs  backup.rs  billing.rs  cluster.rs  collection.rs  common.rs  dashboard.rs  deployment.rs  environment.rs  feature.rs  feature_flag.rs  governance.rs  iam.rs  invite.rs  launchpad.rs  log.rs  media.rs  migration.rs  mod.rs  observability.rs  org.rs  plan.rs  queue.rs  record.rs  role.rs  support.rs  ticket.rs  webhook.rs
src/scoped/: app.rs  auth.rs  migrations.rs  mod.rs  org.rs  records.rs
tests/: integration.rs  scoped.rs
